src/app/components/admin/admin-question/admin-question.component.css
.question-heading {
  width: 97%;
  text-align: left;
  font-size: 1.7rem ;
  font-family: "Bitter", sans-serif;
  font-style: normal;
  font-weight: bold;
  letter-spacing: 0.4px;
  color: #45A0AC;
  opacity: 1;
  overflow-wrap: break-word;
}

.close-question button {
  display: inline-block;
  float: right;
  border: none;
  background-color: transparent;
}

.close-question-icon.mat-icon {
  color: #043D4E;
  width: 50px;
  height: 38px;
}

.close-question-icon.material-icons {
  font-size: 25px;
}

.add-question {
  display: flex;
  justify-content: flex-end;
  margin-left: 2px;
}

.add-question-button {
  width: 20%;
  height: 50px;
  background: #4BA1AC 0 0 no-repeat padding-box;
  box-shadow: 0 2px 2px #00000024;
  border-radius: 4px;
  opacity: 1;
  text-align: center;
  font-size: 16px;
  font-weight: bold;
  font-family: "Inter", sans-serif;
  letter-spacing: 1px;
  color: #FFFFFF;
  text-transform: capitalize;
}

.question-text {
  text-align: left;
  font-size: 18px;
  font-weight: normal;
  font-family: "Inter", sans-serif;
  letter-spacing: 0.36px;
  color: #043D4E;
  opacity: 1;
  width: 50%;
  word-break: break-all;
}

.edit-question, .send-question-for-review {
  display: flex;
  flex-direction: row;
  height: 89%;
  background: #658892 0% 0% no-repeat padding-box;
  border-radius: 8px;
  opacity: 1;
  color: #FFFFFF;
  text-align: center;
  font-weight: normal;
  font-size: 1rem;
  font-family: "Inter", sans-serif;
  letter-spacing: 0.5px;
  padding-bottom: 10px;
  margin-right: 3px;
}

.save-button, .edit-button, .send-for-review-button {
  display: flex;
  justify-content: flex-end;
}
.save-delete-button{
  padding-top: 20px;
  height: 6vh;
  display: flex;
}

.update-button{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  flex: auto;
  padding-top: 20px;
  justify-content: flex-end;
  padding-right: 5%;
}

.edit-button, .author-action-buttons{
  height: 85%;
  display: flex;
  justify-content: flex-end;
}

.questions{
  overflow-y: scroll;
  height: 46vh;
  margin-left: 17px;
}

.save-question{
  display: flex;
  flex-direction: row;
  background: #FFFFFF 0% 0% no-repeat padding-box;
  border: 1px solid #61828C;
  border-radius: 8px;
  opacity: 1;
  color: #658892;
  text-align: center;
  font-weight: normal;
  font-size: 16px;
  font-family: "Inter", sans-serif;
  letter-spacing: 0.5px;
  margin-right: 3px;
}

.delete-question, .cancel-button{
  border: none;
  background: transparent;
}

.update-question {
  height: 0px;
  background: #FFFFFF 0% 0% no-repeat padding-box;
  border: 1px solid #61828C;
  border-radius: 8px;
  opacity: 1;
  color: #658892;
  text-align: center;
  font-weight: normal;
  font-size: 16px;
  font-family: "Inter", sans-serif;
  letter-spacing: 0.5px;
  padding-bottom: 32px;
  margin-right: 3px;
}

.questionHeader {
  display : flex;
  flex-direction: row;
  padding-top: 1%;
}

.parameterHeading {
  width: 97%;
  text-align: left;
  padding-left: 2%;
  font-size: 21px ;
  font-family: "Inter", sans-serif;
  font-style: normal;
  font-weight: bold;
  letter-spacing: 0.4px;
  color: #45A0AC;
  opacity: 1;
}
.questionHeadingDiv{
  margin-left: 23px;
  width: 94%;
}
::ng-deep .question-header .mat-card-header-text {
  margin: 0 0;
}
::ng-deep .question-text .mat-form-field-appearance-outline .mat-form-field-flex  {
  width: 40vw !important;
}
.question-card{
  box-shadow: none !important;
  border-radius: 0 6px 6px 6px;
  border: 1px solid #5D9EAA;
  opacity: 1;
  width: 97%;
}
.question-draft{
  border: 1px solid #5D9EAA;
}
.question-status-heading{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  flex: auto;
  background: #5D9EAA0D 0 0 no-repeat padding-box;
  border-style: solid;
  border-radius: 6px 48px 0 0;
  border-bottom: none;
  opacity: 1;
  width: 25%;
  border-width:1px;
  height: 4.5vh;

}
.question-status-heading-text{
  text-align: left;
  font-family: Inter, serif;
  font-size: 1rem;
  letter-spacing: 0.28px;
  color: #000000;
  padding-top: 3%;
  padding-left: 6%;
  padding-bottom: 5%;
  opacity: 1;
}
.question-container{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  flex: auto;
  padding-top: 1%;
}

.admin-contributor-questions {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  flex: auto;
}

.question-action-buttons {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  flex: auto;
  justify-content: flex-end;
  height: 6vh;
  padding-left: 5%;
}

.status-icon {
  padding-left: 3%;
  padding-top: 2%;
}

.status-icon .sent-for-review-and-reassessment mat-icon {
  color: #BE873E;
}
.status-icon .rejected mat-icon{
  color: #e91e63;
}

.status-icon .draft mat-icon{
  color: #043D4E;
}

.status-icon .published mat-icon {
  color: #6B9F78;
}

.question_status-icon .sent-for-review mat-icon {
  color: #416386;
}
.question_status-icon{
  padding-top: 0.75%;
  padding-right: 2%;
}

.questions-text {
  background: #F4FAFC 0 0 no-repeat padding-box;
  padding-top: 1%;
}

.published-questions {
  width: 90%;
}
.question-comments{
  padding-top: 2%;
  padding-right: 1%;
  color: #043D4E;
}
.reviewer-actions {
  display: flex;
  flex-direction: row;
  flex: auto;
  flex-wrap: wrap;
  justify-content: space-evenly;
  width: 10%;
  padding-bottom: 4%;
}

.approve-action mat-icon {
  color: #6B9F78;
}

.reject-action mat-icon {
  color: #9B293C;
}

.reviewer-actions button {
  background-color: transparent;
  border: none;
  width: 30px;
}

.disable-delete-button .mat-icon {
  color: #b2b2b2;
}
.send-for-review-author-button{
  height: 85%;
}

